help window background image, randomized

--- a/help1.html
+++ b/help1.html
@@ -1,17 +1,23 @@
 <html>
 <head>
+<!-- Important to load jQuery for this page -->
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="application/javascript" src="js/bilingual.js" defer></script>
+<style>
+body {
+	font-size: 20px;
+}
+h1 {
+	color: maroon;
+}
+</style>
 </head>
 <body>
-<h2 lang="ZH">欢迎使用 COCO</h2>
-<a href="#AddUsers">Add users</a><br>
-<a href="#CreatePoll">Create poll</a>
-<p lang="ZH">可以试试 load JSON 选择某项目。</p>
+<h2 lang="ZH">如何制作 工作图</h2>
 <p lang="ZH">To link Nodes：用滑鼠先后点击 nodes ① &amp; ②，然后按钮将它们连接。</p>
+<a href="#AddUsers">添加 某项工作的作者</a><br>
 
 <h1 lang="EN">Welcome to COCO</h1>
-<p lang="EN">You may try "load JSON" and choose a project.</p>
 <p lang="EN">To link Nodes: Mouse click on nodes ① &amp; then ②, then click button to link them.</p>
 </body>
 </html>
