add help pages (stubs)

--- a/help0.html
+++ b/help0.html
@@ -4,8 +4,7 @@
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="application/javascript" src="js/bilingual.js" defer></script>
 <style>
-body { font-size: 20px;
-/* h1, h2 {	color: DeepSkyBlue; } */
+body { font-size: 20px; }
 </style>
 </head>
 <body>
