--- a/help3.html
+++ b/help3.html
@@ -8,7 +8,7 @@ body { font-size: 20px; }
 </style>
 </head>
 <body>
-<h2 lang="ZH">如何制作 工作图</h2>
+<h2 lang="ZH">投票 作者的贡献百分比</h2>
 <p lang="ZH">To link Nodes：用滑鼠先后点击 nodes ① &amp; ②，然后按钮将它们连接。</p>
 <a href="#AddUsers">添加 某项工作的作者</a><br>
 
