help pages, minor

--- a/help0.html
+++ b/help0.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta charset="UTF-8">
 <!-- Important to load jQuery for this page -->
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="application/javascript" src="js/bilingual.js" defer></script>
@@ -12,7 +13,7 @@ body { font-size: 20px; }
 <a lang="ZH" href="help1.html">如何制作 工作图</a><br>
 <a lang="ZH" href="help2.html">添加 某项工作的作者</a><br>
 <a lang="ZH" href="help3.html">投票 作者的贡献百分比</a>
-<p lang="ZH">可以试试 按「load JSON」选择某项目，玩一下。</p>
+<p lang="ZH">可以试试 按「load JSON」选择某个项目，玩一下。</p>
 <!----------------------------------->
 <h2 lang="EN" style="margin-top:-40px">Welcome to COCO, create de-centralized borderless companies!</h2>
 <a lang="EN" href="help1.html">Create a Project Graph</a><br>
