--- a/help1.html
+++ b/help1.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta charset="UTF-8">
 <!-- Important to load jQuery for this page -->
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="application/javascript" src="js/bilingual.js" defer></script>
