Help page background more perfect

--- a/help0.html
+++ b/help0.html
@@ -9,16 +9,21 @@ body { font-size: 20px; }
 </style>
 </head>
 <body>
-<h2 lang="ZH">欢迎來到 COCO，建立 去中心化的无国界公司！</h2>
-<a lang="ZH" href="help1.html">如何制作 工作图</a><br>
-<a lang="ZH" href="help2.html">添加 某项工作的作者</a><br>
-<a lang="ZH" href="help3.html">投票 作者的贡献百分比</a>
-<p lang="ZH">可以试试 按「load JSON」选择某个项目，玩一下。</p>
+<div lang="ZH">
+<h2>欢迎來到 COCO，建立 去中心化的无国界公司！</h2>
+<a href="help1.html">如何制作 工作图</a><br>
+<a href="help2.html">添加 某项工作的作者</a><br>
+<a href="help3.html">投票 作者的贡献百分比</a>
+<p>可以试试 按「load JSON」选择某个项目，玩一下。</p>
+</div>
 <!----------------------------------->
-<h2 lang="EN" style="margin-top:-40px">Welcome to COCO, create de-centralized borderless companies!</h2>
-<a lang="EN" href="help1.html">Create a Project Graph</a><br>
-<a lang="EN" href="help2.html">Add authors to a task</a><br>
-<a lang="EN" href="help3.html">Vote on authors' % contribution</a>
-<p lang="EN">You may try "load JSON" button and choose a project to play with.</p>
+<div lang="EN">
+<h2 style="margin-top:-40px">Welcome to COCO, create de-centralized borderless companies!</h2>
+<a href="help1.html">Create a Project Graph</a><br>
+<a href="help2.html">Add authors to a task</a><br>
+<a href="help3.html">Vote on authors' % contribution</a>
+<p>You may try "load JSON" button and choose a project to play with.</p>
+</div>
+<p>NOTICE:  The Help pages are under construction and may contain garbage, please be patient...</p><br>
 </body>
 </html>
