--- a/help0.html
+++ b/help0.html
@@ -4,6 +4,13 @@
 <!-- Important to load jQuery for this page -->
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script type="application/javascript" src="js/bilingual.js" defer></script>
+<script>
+window.parent.document.getElementById('home').style.display = "none";
+window.parent.document.getElementById('forward').onclick = () => {
+	window.location = "help1.html"; }
+window.parent.document.getElementById('forward').style.display = '';
+window.parent.document.getElementById('backward').style.display = "none";
+</script>
 <style>
 body { font-size: 20px; }
 </style>
@@ -12,18 +19,18 @@ body { font-size: 20px; }
 <div lang="ZH">
 <h2>欢迎來到 COCO，建立 去中心化的无国界公司！</h2>
 <a href="help1.html">如何制作 工作图</a><br>
-<a href="help2.html">添加 某项工作的作者</a><br>
-<a href="help3.html">投票 作者的贡献百分比</a>
+<a href="help2.html">添加作者、投票</a><br>
+<a href="help3.html">将资料储存到 Git 或 JSON</a><br>
 <p>可以试试 按「load JSON」选择某个项目，玩一下。</p>
 </div>
 <!----------------------------------->
 <div lang="EN">
-<h2 style="margin-top:-40px">Welcome to COCO, create de-centralized borderless companies!</h2>
+<h2>Welcome to COCO, create de-centralized borderless companies!</h2>
 <a href="help1.html">Create a Project Graph</a><br>
-<a href="help2.html">Add authors to a task</a><br>
-<a href="help3.html">Vote on authors' % contribution</a>
+<a href="help2.html">Add authors to a task, start voting</a><br>
+<a href="help3.html">Save your changes to Git or JSON</a>
 <p>You may try "load JSON" button and choose a project to play with.</p>
 </div>
-<p>NOTICE:  The Help pages are under construction and may contain garbage, please be patient...</p><br>
+<br>
 </body>
 </html>
