minor, help page

--- a/help3.html
+++ b/help3.html
@@ -21,7 +21,7 @@ body { font-size: 20px; }
 <h2>将资料上载到 Git</h2>
 <p>你所做的修改必须上传到 Git，才可以与其他队员分享，包括 merging.</p>
 <h2>资料储存为 JSON 档案</h2>
-<p>纯粹作为个人备份只用，JSON 格式比较通用。</p>
+<p>纯粹作为个人备份用，JSON 格式比较通用。</p>
 </div>
 <!----------------------------------->
 <div lang="EN">
