explain Git in Help

--- a/help3.html
+++ b/help3.html
@@ -20,6 +20,8 @@ body { font-size: 20px; }
 <div lang="ZH">
 <h2>将资料上载到 Git</h2>
 <p>你所做的修改必须上传到 Git，才可以与其他队员分享，包括 merging.</p>
+<p>网上的使用者 不可以直接写进 Git 库，要亲自<b>注册 Git 帐号</b>才可以参与合作。</p>
+<p>也可以下载 COCO server 用服务器 接通私人的 Git 库。</p>
 <h2>资料储存为 JSON 档案</h2>
 <p>纯粹作为个人备份用，JSON 格式比较通用。</p>
 </div>
