minor bug, IN-progress label

--- a/project-graph.html
+++ b/project-graph.html
@@ -27,7 +27,7 @@ by the function toggleSidePane() in project-graph.js -->
 <div id="side-pane" style="width:300px; display:none; padding:5px; z-index:0; background-color:White;">
 	<span id="SidePaneButton" onclick="toggleSidePane()" style="float:right">🞀</span>
 	<label>Status:</label><br>
-	<input type="radio" id="in-progress" name="status" value="IN-progress" onclick="changeStatus(this)">
+	<input type="radio" id="in-progress" name="status" value="in-progress" onclick="changeStatus(this)">
 	<label class="colorKey" for="in-progress">in progress</label><br>
 	<input type="radio" id="finished" name="status" value="finished" onclick="changeStatus(this)">
 	<label class="colorKey" for="finished">finished</label><br>
