--- a/project-graph.html
+++ b/project-graph.html
@@ -57,7 +57,8 @@ by the function toggleSidePane() in project-graph.js -->
 	<label disabled>Expected # workers</label>
 	<input type="number" id="ExpWorkers" style="width:4em;" disabled><br>
 
-	<label>Authors:</label><br>
+	<label style="display:inline-block; margin-top:5px;">Authors:</label>
+	<button id='startVote' style="float:right; margin-top:5px; margin-right:20px;">vote</button><br>
 	<div id="authors"></div>
 </div>
 <span id="SidePaneButton2" onclick="toggleSidePane()" style="float:left;">🞂</span>
